--- a/content/pages/studies/978-0-931902-83-3.rst
+++ b/content/pages/studies/978-0-931902-83-3.rst
@@ -6,7 +6,8 @@ Antiphon and Psalm in the Ambrosian Office
 :volume: L
 :volume_part: 3
 :price: 78
-:isbn: 978-0-931902-83-3
+:isbn13: 978-0-931902-83-3
+:isbn10: 0-931902-83-5
 :pages: ix + 377
 :publisher: IMM
 :place: Ottawa
