--- a/content/pages/studies/978-1-896926-14-8.rst
+++ b/content/pages/studies/978-1-896926-14-8.rst
@@ -12,3 +12,5 @@ CANTUS: Four Klosterneuburg Antiphoners, Augustiner-Chorherren Stiftsbibliothek,
 :publisher: IMM
 :place: Ottawa
 :year: 1998
+
+Introduction by Debra Lacoste.
