--- a/content/pages/studies/978-1-926664-13-2.rst
+++ b/content/pages/studies/978-1-926664-13-2.rst
@@ -1,4 +1,4 @@
-The Versified Office: Sources, poetry and Chants (Volume 2)
+The Versified Office: Sources, poetry and chants (Volume 2)
 ===========================================================
 
 :author: Hughes, Andrew
