--- a/content/pages/in_translation/978-0-931902-44-4.rst
+++ b/content/pages/in_translation/978-0-931902-44-4.rst
@@ -13,4 +13,4 @@ Nikolaus Gengenbach's Musica nova: Newe Singekunst
 :place: Ottawa
 :year: 1996
 
-A Commentary, Critical Edition and Translation.
+A Commentary, Critical Edition and Translation von/by Allen Scott.
