--- a/content/pages/studies/978-1-896926-43-8.rst
+++ b/content/pages/studies/978-1-896926-43-8.rst
@@ -13,5 +13,5 @@ HISTORIÆ: L'Office Romano-Franc des Saints Martyrs Denis, Rustique et Eleuthere
 :place: Ottawa
 :year: 2002
 
-Composé à partir de la Passio du Pseudo-Fortunat (VIe-VIIIe s.); Remanié et augmenté par l’archichancelier Hilduin vers 835 puis au Xe s. Introduction et edition par Jean-François Goudesenne.
+Composé à partir de la Passio du Pseudo-Fortunat (VIe-VIIIe s.); Remanié et augmenté par l’archichancelier Hilduin vers 835 puis au Xe s. Introduction et édition par Jean-François Goudesenne.
 
