--- a/content/pages/studies/978-0-931902-94-9.rst
+++ b/content/pages/studies/978-0-931902-94-9.rst
@@ -1,4 +1,4 @@
-The Medieval West Meets Rest of the World
+The Medieval West Meets the Rest of the World
 =========================================
 
 :editor: van Deusen, Nancy
