--- a/content/pages/studies/978-0-931902-63-5.rst
+++ b/content/pages/studies/978-0-931902-63-5.rst
@@ -1,4 +1,4 @@
-Letter Notations in Middle Ages
+Letter Notations in the Middle Ages
 ===============================
 
 :author: Santosuosso, Alma Colk
