--- a/content/pages/studies/978-1-896926-32-2.rst
+++ b/content/pages/studies/978-1-896926-32-2.rst
@@ -1,7 +1,8 @@
 HISTORIÆ: Officium Presentationis Beate Virginis Marie in Templo
 ================================================================
 
-:author: Boyce, James; Coleman, William E.
+:author: Boyce, James
+:author: Coleman, William E.
 :series: Musicological Studies
 :volume: LXV
 :volume_part: 5
