--- a/content/pages/studies/978-1-926664-40-8.rst
+++ b/content/pages/studies/978-1-926664-40-8.rst
@@ -1,7 +1,8 @@
 HISTORIÆ: The Office of Saint William of York
 =============================================
 
-:author: Toy, John; Hiley, David
+:author: Toy, John
+:author: Hiley, David
 :series: Musicological Studies
 :volume: LXV
 :volume_part: 27
