--- a/content/pages/studies/978-1-926664-11-8.rst
+++ b/content/pages/studies/978-1-926664-11-8.rst
@@ -1,7 +1,8 @@
 HISTORIÆ: L'Office de la Couronne d'épines à Sens
 =================================================
 
-:author: Arnaud, Brigitte; Daniel, Annie
+:author: Arnaud, Brigitte
+:author: Daniel, Annie
 :series: Musicological Studies
 :volume: LXV
 :volume_part: 19
