--- a/content/pages/studies/978-1-926664-11-8.rst
+++ b/content/pages/studies/978-1-926664-11-8.rst
@@ -2,7 +2,7 @@ HISTORIÆ: L'Office de la Couronne d'épines à Sens
 =================================================
 
 :author: Arnaud, Brigitte
-:author: Daniel, Annie
+:author2: Daniel, Annie
 :series: Musicological Studies
 :volume: LXV
 :volume_part: 19
