--- a/content/pages/studies/978-1-926664-15-6.rst
+++ b/content/pages/studies/978-1-926664-15-6.rst
@@ -2,8 +2,8 @@ HISTORIÆ: Historia Sancti Galli (circa 900)
 ===========================================
 
 :author: Tremp, Ernst
-:author: Berschin, Walter
-:author: Hiley, David
+:author2: Berschin, Walter
+:author3: Hiley, David
 :series: Musicological Studies
 :volume: LXV
 :volume_part: 21
