--- a/content/pages/collected_works/978-0-931902-95-6.rst
+++ b/content/pages/collected_works/978-0-931902-95-6.rst
@@ -14,4 +14,4 @@ Obras completas de Cristóbal Galán, Volumen V: Cuartetos/Quartets, Primera Par
 :place: Ottawa
 :year: 1995
 
-Edición de John H. Baron; Daniel L. Heiple.
+Edición de John H. Baron, Daniel L. Heiple.
