--- a/content/pages/collected_works/978-1-896926-34-6.rst
+++ b/content/pages/collected_works/978-1-896926-34-6.rst
@@ -1,6 +1,7 @@
 The Songs of the Master Trouvère Gace Brulé (ca. 1159-ca. 1213)
 ===============================================================
 
+:author: Gace Brulé
 :editor: Tischler, Hans
 :series: Collected Works
 :volume: XVIII
