--- a/content/pages/collected_works/978-0-931902-95-6.rst
+++ b/content/pages/collected_works/978-0-931902-95-6.rst
@@ -1,6 +1,7 @@
 Obras completas de Cristóbal Galán, Volumen V: Cuartetos/Quartets, Primera Parte
 ================================================================================
 
+:author: Cristóbal de Galán
 :editor: Baron, John H.
 :editor2: Heiple, Daniel L.
 :series: Collected Works
