--- a/content/pages/collected_works/978-0-931902-77-2.rst
+++ b/content/pages/collected_works/978-0-931902-77-2.rst
@@ -1,6 +1,7 @@
 Collected Works of Robert de Févin, Masses and Motet
 ====================================================
 
+:author: Robert de Févin
 :editor: Clinkscale, Edward
 :series: Collected Works
 :volume: XIII
