--- a/content/pages/collected_works/978-0-931902-84-0.rst
+++ b/content/pages/collected_works/978-0-931902-84-0.rst
@@ -1,6 +1,7 @@
 Collected Works of Francisco de Peñalosa, Twenty-Four Motets
 ============================================================
 
+:author: Francisco de Peñalosa
 :editor: Hardie, Jane Morlet
 :series: Collected Works
 :volume: XIV
