--- a/content/pages/collected_works/978-1-896926-07-0.rst
+++ b/content/pages/collected_works/978-1-896926-07-0.rst
@@ -1,6 +1,7 @@
 Jean Maillard, The Masses
 =========================
 
+:author: Jean Maillard
 :editor: Rosenstock, Raymond H.
 :series: Collected Works
 :volume: XVI
