--- a/content/pages/manuscripts/978-1-896926-60-5.rst
+++ b/content/pages/manuscripts/978-1-896926-60-5.rst
@@ -1,2 +1,17 @@
 Utrecht, Universiteitsbibliotheek, Hs. 16 H 34
 ==============================================
+
+:editor: Hascher-Burger, Ulrike
+:series: Publications of Mediæval Musical Manuscripts
+:volume: XXXI
+:pages: xxxviii
+:plates: 277
+:size: 14 x 20
+:price: 148
+:isbn10: 1-896926-60-6
+:isbn13: 978-1-896926-60-5
+:publisher: IMM
+:place: Ottawa
+:year: 2004
+
+NOTE: Out of Print (contact IMM for further information). A fascinating composite manuscript transmitting Latin songs for 1 to 3 voices and Dutch Christmas carols for 2 voices. The 15th c. ms, believed to have been copied in the Ijssel Valley in the Netherlands, contains both white mensural and German neume notation. Prepared by Ulrike Hascher-Burger. Includes 6 colour plates (pp. xl-xlv), followed by the complete manuscript in greyscale images.
