--- a/content/pages/manuscripts/978-0-931902-62-8.rst
+++ b/content/pages/manuscripts/978-0-931902-62-8.rst
@@ -1,2 +1,15 @@
 Cambridge, University Library Ff.i.17 (1)
 =========================================
+
+:editor: Gillingham, Bryan
+:series: Publications of Mediæval Musical Manuscripts
+:volume: XVII
+:pages: xxvi + 114
+:price: 64
+:isbn10: 0-931902-62-2
+:isbn13: 978-0-931902-62-8
+:publisher: IMM
+:place: Ottawa
+:year: 1989
+
+Prepared by Bryan Gillingham.
