--- a/content/pages/manuscripts/978-1-896926-20-9.rst
+++ b/content/pages/manuscripts/978-1-896926-20-9.rst
@@ -15,4 +15,4 @@ Mss Avranches, Bibliothèque municipale 236, 237: Music Theory in Mediaeval Norm
 :place: Ottawa
 :year: 1999
 
-Two 10th c. mss once in the possession of the abbey of Mont Saint-Michel. Mss 236, compiled for teaching purposes, contains the complete text of Boethius’ treatise on music and excerpts from Venerable Bede’s treatises on the art of poetry, the reckoning of time and a few quotations from De natura rerum. Ms 237 comprises Boethius’ De institutione musica, a short unpublished text on the modes, and six diagrams of the different species. Edited by Alma Santosuosso.
+Two 10th c. mss once in the possession of the abbey of Mont Saint-Michel. Ms 236, compiled for teaching purposes, contains the complete text of Boethius’ treatise on music and excerpts from Venerable Bede’s treatises on the art of poetry, the reckoning of time and a few quotations from De natura rerum. Ms 237 comprises Boethius’ De institutione musica, a short unpublished text on the modes, and six diagrams of the different species. Edited by Alma Santosuosso.
