--- a/content/pages/manuscripts/978-1-896926-93-3.rst
+++ b/content/pages/manuscripts/978-1-896926-93-3.rst
@@ -1,2 +1,16 @@
-Tallin, Historical Museum, Ms 237.1.228.a (xix.184; 24075)
-==========================================================
+Tallin, Eesti Ajaloomuuseum (Tallin, Historical Museum), MS 237.1.228.a (XIX.184; 24075)
+========================================================================================
+
+:editor: Goncharova, Victoria
+:series: Publications of Mediæval Musical Manuscripts
+:volume: XXXV
+:pages: xli
+:plates: 630
+:size: 27 x 40
+:price: 264
+:isbn13: 978-1-896926-93-3
+:publisher: IMM
+:place: Ottawa
+:year: 2008
+
+Greyscale facsimile of an Antiphonal-Gradual from Preetz (near Kiel), copied c. 1525. Copied in “Hufnagel” notation. Ms 237.1.228a is a witness to the liturgical practice of one of the largest and most influential Benedictine convents in Schleswig-Holstein. Edited by Victoria Goncharova.
