--- a/content/pages/manuscripts/978-1-896926-06-3.rst
+++ b/content/pages/manuscripts/978-1-896926-06-3.rst
@@ -1,2 +1,17 @@
-National Library of Wales, Ms.20541 E (Penpont Antiphonal)
-==========================================================
+National Library of Wales, MS.20541 E, The Penpont Antiphonal
+=============================================================
+
+:editor: Edwards, Owain Tudor
+:series: Publications of Mediæval Musical Manuscripts
+:volume: XXII
+:pages: 122
+:plates: 623
+:size: 25 x 41
+:price: 400
+:isbn10: 1-896926-06-1
+:isbn13: 978-1-896926-06-3
+:publisher: IMM
+:place: Ottawa
+:year: 1997
+
+Greyscale facsimile of an important antiphonal of Sarum use, prepared for a non-monastic Welsh church in the mid-14th century. Its name, “Penpont Antiphonal” is after the manor of that name in south Wales with which it was connected and where is was kept until its sale at a Sotheby auction in 1960. Introduction and indices prepared by Owain Tudor Edwards.
