--- a/content/pages/studies/978-1-926664-07-1.rst
+++ b/content/pages/studies/978-1-926664-07-1.rst
@@ -1,2 +1,4 @@
 Duhamel/Swanson Traditions in Western Plainchant/Les traditions du 
 ==================================================================
+
+:volume: XCIV
