--- a/content/pages/studies/978-1-896926-96-4.rst
+++ b/content/pages/studies/978-1-896926-96-4.rst
@@ -1,2 +1,4 @@
 Dies est leticie: Essays on Chant for Janka Szendrei - D. Hiley/G. Kiss
 =======================================================================
+
+:volume: XC
