--- a/content/pages/manuscripts/978-1-896926-26-1.rst
+++ b/content/pages/manuscripts/978-1-896926-26-1.rst
@@ -1,2 +1,5 @@
 Lambeth Palace, Sion College MS L1 (York Breviary) - 1
 ======================================================
+
+:volume: XXV
+:volume_part: 1
