--- a/content/pages/manuscripts/978-1-926664-18-7.rst
+++ b/content/pages/manuscripts/978-1-926664-18-7.rst
@@ -1,2 +1,5 @@
 Lambeth Palace, Sion College MS L1 (York Breviary - Indices) - 3
 ================================================================
+
+:volume: XXV
+:volume_part: 3
