--- a/content/pages/manuscripts/978-1-896926-55-1.rst
+++ b/content/pages/manuscripts/978-1-896926-55-1.rst
@@ -1,2 +1,4 @@
 L'antiphonaire de la Paix des Princes chrétien (St Omer Ms)
 ===========================================================
+
+:volume: XXX
