--- a/content/pages/in_translation/978-1-896926-94-0.rst
+++ b/content/pages/in_translation/978-1-896926-94-0.rst
@@ -1,2 +1,4 @@
 Le Droict Chemin de Musique (The Direct Path of Music) of Louis Bourgeois
 =========================================================================
+
+:volume: XIX
