--- a/content/pages/in_translation/978-1-926664-17-0.rst
+++ b/content/pages/in_translation/978-1-926664-17-0.rst
@@ -1,2 +1,4 @@
 Guido's Rhythmic Rules: Medieval Fundamentals of Music Theory in Verse Form
 ===========================================================================
+
+:volume: XX
