--- a/content/pages/collected_works/978-0-931902-89-5.rst
+++ b/content/pages/collected_works/978-0-931902-89-5.rst
@@ -1,2 +1,5 @@
 Antoine de Févin, Lamentations, Magnificats, Motets, Chansons
 =============================================================
+
+:volume: XI
+:volume_part: 3
