--- a/content/pages/collected_works/978-0-931902-41-3.rst
+++ b/content/pages/collected_works/978-0-931902-41-3.rst
@@ -1,2 +1,5 @@
 Antoine de Févin Opera Dubia, Fragments, Intabulations
 ======================================================
+
+:volume: XI
+:volume_part: 4
