--- a/content/pages/in_translation/978-1-896926-35-3.rst
+++ b/content/pages/in_translation/978-1-896926-35-3.rst
@@ -2,7 +2,7 @@ Introductorium Musicæ of Johannes Keck
 ======================================
 
 :author: Slemon, Peter
-
+:author2: Keck, Johannes
 :volume: XVI
 :pages: xiv + 64
 :price: 56
