--- a/content/pages/collected_works/978-1-896926-19-3.rst
+++ b/content/pages/collected_works/978-1-896926-19-3.rst
@@ -2,7 +2,7 @@ The Lamentations of Jeremiah
 ============================
 
 :author: Francisco de Peñalosa
-:volume: XVI
+:volume: XIV
 :volume_part: 2
 :ISBN10: 1-896926-19-3
 :ISBN: 978-1-896926-19-3
