--- a/content/pages/collected_works/978-0-931902-78-9.rst
+++ b/content/pages/collected_works/978-0-931902-78-9.rst
@@ -4,4 +4,4 @@ Solos, duos y tríos IV
 :author: Galán, Cristóbal 
 :volume: XII
 :volume_part: 4
-:ISBN: 978-0-931902-78-9
+:isbn13: 978-0-931902-78-9
