--- a/content/pages/collected_works/978-1-896926-46-9.rst
+++ b/content/pages/collected_works/978-1-896926-46-9.rst
@@ -2,7 +2,7 @@ Sextetos y Septetos VII
 =======================
 
 :author: Galán, Cristóbal
-:ISBN10: 1-896926-46-0
-:ISBN: 978-1-896926-46-9
+:isbn10: 1-896926-46-0
+:isbn13: 978-1-896926-46-9
 :volume: XII
 :volume_part: 7
