Fix semicolon-separated authors

--- a/content/pages/studies/978-1-896926-89-6.rst
+++ b/content/pages/studies/978-1-896926-89-6.rst
@@ -1,8 +1,8 @@
 Studies in Medieval Chant and Liturgy in Honour of David Hiley
 ==============================================================
 
-:editor: Bailey, Terence; Dobszay, László
-
+:editor: Bailey, Terence
+:editor2: Dobszay, László
 :volume: LXXXVII
 :pages: v + 519
 :price: 120
