--- a/content/pages/studies/978-1-896926-51-3.rst
+++ b/content/pages/studies/978-1-896926-51-3.rst
@@ -1,8 +1,8 @@
 The Poetic and Musical Legacy of Heloise and Abelard: An Anthology of Essays by Various Authors
 ===============================================================================================
 
-:editor: Stewart, Marc; Wulstan, David
-
+:editor: Stewart, Marc
+:editor2: Wulstan, David
 :volume: LXXVIII
 :price: 76
 :isbn13: 978-1-896926-51-3
