--- a/content/pages/studies/978-1-896926-10-0.rst
+++ b/content/pages/studies/978-1-896926-10-0.rst
@@ -1,7 +1,8 @@
-Manuscrits en écriture bénéventaine... Bénévent (2)
-===================================================
+Les manuscrits en écriture bénéventaine de la Bibliothèque Capitulaire de Bénévent; Tome III: Formulaires liturgiques (offices), Tables et index
+================================================================================================================================================
 
-:author: Mallet et Thibaut
+:author: Mallet, Jean
+:author2: Thibaut, André
 :volume: LXXI
 :volume_part: 2
 :price: 180
@@ -9,3 +10,5 @@ Manuscrits en écriture bénéventaine... Bénévent (2)
 :isbn13: 978-1-896926-10-0
 :publisher: IMM
 :place: Ottawa
+:date: 1997
+:corrigenda: Sigles et Abbréviations insert
