--- a/content/pages/manuscripts/978-1-896926-17-9.rst
+++ b/content/pages/manuscripts/978-1-896926-17-9.rst
@@ -1,4 +1,16 @@
-Oxford, Ms. e Mus. 126 (York Processional)
-==========================================
+Oxford, Bodleian Library, MS. e Mus. 126 (The York Processional)
+================================================================
 
+:editor: Hiley, David
 :volume: XXIII
+:price: 210
+:isbn10: 1-896926-17-7
+:isbn13: 978-1-896926-17-9
+:publisher: IMM
+:place: Ottawa
+:date: 1998
+:pages: xxiv
+:plates: 172
+:size: 23 x 30
+
+Introduction by David Hiley.
