--- a/content/pages/manuscripts/978-1-896926-55-1.rst
+++ b/content/pages/manuscripts/978-1-896926-55-1.rst
@@ -14,4 +14,4 @@ L'antiphonaire de la Paix des Princes chrétiens: Calligraphié à Saint-Omer pa
 :plates: 520
 :size: 18 x 25
 
-Introduction et index - Jean-François Goudesenne; Étude iconographique et stylistique - Marc Gil. Greyscale facsimile of the “St Omer Antiphoner,” transmitting the rite of the Collégiale Notre-Dame, Diocese of Thérouanne (Flanders).	192,00
+Introduction et index - Jean-François Goudesenne; Étude iconographique et stylistique - Marc Gil. Greyscale facsimile of the “St Omer Antiphoner,” transmitting the rite of the Collégiale Notre-Dame, Diocese of Thérouanne (Flanders).
