--- a/content/pages/collected_works/978-1-926664-38-5.rst
+++ b/content/pages/collected_works/978-1-926664-38-5.rst
@@ -1,7 +1,12 @@
-Hildegard of Bingen, Symphonia
-==============================
+Hildegard of Bingen, Symphonia: A Comparative Edition
+=====================================================
 
 :author: Hildegard of Bingen
+:editor: Corrigan, Vincent
 :volume: XXX
-:isbn13: 978-1-926664-38-5
 :price: 126
+:isbn13: 978-1-926664-38-5
+:publisher: IMM
+:place: Lions Bay, BC
+:date: 2016
+:pages: xxx + 273
