--- a/content/pages/collected_works/978-0-931902-86-4.rst
+++ b/content/pages/collected_works/978-0-931902-86-4.rst
@@ -1,7 +1,13 @@
-Intabolatura di Liuto (1566)
-============================
+Collected Works of Melchior Neusidler: Intabolatura di Liuto (Venice, 1566), An Edition of the Original Music
+=============================================================================================================
 
 :author: Neusidler, Melchior
+:editor: Jacobs, Charles
 :volume: XV
 :isbn10: 0-931902-86-x
 :isbn13: 978-0-931902-86-4
+:price: 76
+:publisher: IMM
+:place: Ottawa
+:date: 1994
+:pages: xiii + 80
