--- a/content/pages/collected_works/978-1-926664-03-3.rst
+++ b/content/pages/collected_works/978-1-926664-03-3.rst
@@ -1,5 +1,5 @@
-An Anthology of Fifteenth-Century Italian Psalms, Vol. 1
-========================================================
+An Anthology of Fifteenth-Century Italian Psalms, Volume 1
+==========================================================
 
 :editor: Karr, John
 :volume: XXVII
