--- a/content/pages/collected_works/978-1-926664-25-5.rst
+++ b/content/pages/collected_works/978-1-926664-25-5.rst
@@ -1,8 +1,13 @@
-Anthology of 15c Italian Psalms, vol. 2
-=======================================
+An Anthology of Fifteenth-Century Italian Psalms, Volume 2
+==========================================================
 
-:author: Karr, John
+:editor: Karr, John
 :volume: XXVII
 :volume_part: 2
 :isbn13: 978-1-926664-25-5
 :price: 130
+:publisher: IMM
+:place: Lions Bay, BC
+:date: 2013
+:pages: xl + 416
+:corrigenda: The title page mistakenly reads “Wissenschaftliche Abhandlungen / Musicological Studies” as the series; a label affixed overtop corrects this to “Gesamtausgaben / Collected Works.”
