--- a/content/pages/collected_works/978-1-896926-37-7.rst
+++ b/content/pages/collected_works/978-1-896926-37-7.rst
@@ -1,8 +1,15 @@
-Capella Sistina 51. Bibl. Apost. Vaticana: Liber Missarum (3)
-=============================================================
+Capella Sistina 51, Biblioteca Apostolica Vaticana, Città del Vaticano: Liber Missarum (3)
+==========================================================================================
 
+:editor: Eakins, Rex
 :volume: XVII
 :volume_part: 3
 :isbn10: 1-896926-37-1
 :isbn13: 978-1-896926-37-7
 :price: 106
+:publisher: IMM
+:place: Ottawa
+:date: 2001
+:pages: xc + 315
+
+An Editorial Transnotation of the Manuscript.
