--- a/content/pages/studies/978-1-926664-44-6.rst
+++ b/content/pages/studies/978-1-926664-44-6.rst
@@ -1,9 +1,12 @@
-Denkmodelle zur französischen Mensuraltheorie des 14. Jahrhunderts (2)
-======================================================================
+Denkmodelle zur französischen Mensuraltheorie des 14. Jahrhunderts, Band II: Analytische Untersuchung
+=====================================================================================================
 
 :author: Ristory, Heinz
 :volume: LXXXI
 :volume_part: 2
-:price: 154
 :isbn13: 978-1-926664-44-6
+:price: 154
 :publisher: IMM
+:place: Lions Bay, BC
+:date: 2016
+:pages: x + 592
