--- a/content/pages/collected_works/978-1-896926-25-4.rst
+++ b/content/pages/collected_works/978-1-896926-25-4.rst
@@ -1,8 +1,15 @@
-Capella Sistina 51. Bibl. Apost. Vaticana: Liber Missarum (2)
-=============================================================
+Capella Sistina 51, Biblioteca Apostolica Vaticana, Città del Vaticano: Liber Missarum (2)
+==========================================================================================
 
+:editor: Eakins, Rex
 :volume: XVII
 :volume_part: 2
 :price: 98
 :isbn10: 1-896926-25-8
 :isbn13: 978-1-896926-25-4
+:publisher: IMM
+:place: Ottawa 
+:date: 2000
+:pages: lii + 313 pp. 
+
+An Editorial Transnotation of the Manuscript.
