--- a/content/pages/collected_works/978-0-931902-41-3.rst
+++ b/content/pages/collected_works/978-0-931902-41-3.rst
@@ -1,5 +1,14 @@
-Antoine de Févin Opera Dubia, Fragments, Intabulations
-======================================================
+Collected Works of Antoine de Févin: Opera Dubia, Fragments, Intabulations
+==========================================================================
 
+:author: Févin, Antoine de
+:editor: Clinkscale, Edward
 :volume: XI
 :volume_part: 4
+:isbn10: 0-931902-41-x
+:isbn13: 978-0-931902-41-3
+:publisher: IMM
+:price: 72
+:place: Ottawa 
+:date: 1996
+:pages: viii + 124
