--- a/content/pages/collected_works/978-0-931902-95-6.rst
+++ b/content/pages/collected_works/978-0-931902-95-6.rst
@@ -1,7 +1,7 @@
 Obras completas de Cristóbal Galán, Volumen V: Cuartetos/Quartets, Primera Parte
 ================================================================================
 
-:author: Cristóbal de Galán
+:author: Galán, Cristóbal
 :editor: Baron, John H.
 :editor2: Heiple, Daniel L.
 
