--- a/content/pages/collected_works/978-1-896926-63-6.rst
+++ b/content/pages/collected_works/978-1-896926-63-6.rst
@@ -1,7 +1,7 @@
 Obras completas de Cristóbal Galán, Volumen IX: Octetos 9-15
 ============================================================
 
-:author: Cristóbal de Galán
+:author: Galán, Cristóbal
 :editor: Baron, John H.
 :editor2: Vogt, Eric W.
 
