--- a/content/pages/collected_works/978-0-931902-70-3.rst
+++ b/content/pages/collected_works/978-0-931902-70-3.rst
@@ -1,7 +1,7 @@
-Obras completas de Cristóbal de Galán, Volumen III: Obras litúrgicas, Tercera Parte
+Obras completas de Cristóbal Galán, Volumen III: Obras litúrgicas, Tercera Parte
 ===================================================================================
 
-:author: Cristóbal de Galán
+:author: Galán, Cristóbal
 :editor: Baron, John H.
 :editor2: Heiple, Daniel L.
 
