--- a/content/pages/collected_works/978-1-896926-74-2.rst
+++ b/content/pages/collected_works/978-1-896926-74-2.rst
@@ -1,7 +1,7 @@
 Obras completas de Cristóbal Galán, Volumen X: Octetos 16-22
 ============================================================
 
-:author: Cristóbal de Galán
+:author: Galán, Cristóbal
 :editor: Baron, John H.
 :editor2: Vogt, Eric W.
 
