--- a/content/pages/collected_works/978-0-931902-77-2.rst
+++ b/content/pages/collected_works/978-0-931902-77-2.rst
@@ -1,9 +1,8 @@
 Collected Works of Robert de Févin, Masses and Motet
 ====================================================
 
-:author: Robert de Févin
+:author: Févin, Robert de 
 :editor: Clinkscale, Edward
-
 :volume: XIII
 :pages: xx + 140
 :price: 85
