--- a/content/pages/collected_works/978-0-931902-84-0.rst
+++ b/content/pages/collected_works/978-0-931902-84-0.rst
@@ -1,9 +1,8 @@
 Collected Works of Francisco de Peñalosa, Twenty-Four Motets
 ============================================================
 
-:author: Francisco de Peñalosa
+:author: Peñalosa, Francisco de
 :editor: Hardie, Jane Morlet
-
 :volume: XIV
 :volume_part: 1
 :pages: xliii + 159
