--- a/content/pages/collected_works/978-1-896926-07-0.rst
+++ b/content/pages/collected_works/978-1-896926-07-0.rst
@@ -1,9 +1,8 @@
 Jean Maillard, The Masses
 =========================
 
-:author: Jean Maillard
+:author: Maillard, Jean 
 :editor: Rosenstock, Raymond H.
-
 :volume: XVI
 :volume_part: 1
 :pages: xvii + 273
