--- a/content/pages/collected_works/978-1-896926-15-5.rst
+++ b/content/pages/collected_works/978-1-896926-15-5.rst
@@ -1,4 +1,5 @@
-Obras completas de Cristóbal Galán, Volumen VI: Cuartetos, Quintetos y Sextetos ===============================================================================
+Obras completas de Cristóbal Galán, Volumen VI: Cuartetos, Quintetos y Sextetos
+===============================================================================
 
 :author: Galán, Cristóbal
 :editor: Baron, John H.
