--- a/content/pages/collected_works/978-0-931902-82-6.rst
+++ b/content/pages/collected_works/978-0-931902-82-6.rst
@@ -1,5 +1,14 @@
-Antoine de Févin Messen (II) / Masses (II)
-==========================================
+Collected Works of Antoine de Févin: Masses (II); Gesamtausgabe der Werke von Antoine de Févin: Messen (II)
+===========================================================================================================
 
+:author: Févin, Antoine de
+:editor: Clinkscale, Edward
 :volume: XI
 :volume_part: 2
+:isbn10: 0-931902-82-7
+:isbn13: 978-0-931902-82-6
+:publisher: IMM
+:price: 108
+:place: Ottawa 
+:date: 1993
+:pages: xxiii + 190
