--- a/content/pages/collected_works/978-1-896926-66-7.rst
+++ b/content/pages/collected_works/978-1-896926-66-7.rst
@@ -1,8 +1,15 @@
-Capella Sistina 51. Bibl. Apost. Vaticana: Liber Missarum (6)
-=============================================================
+Capella Sistina 51, Biblioteca Apostolica Vaticana, Città del Vaticano: Liber Missarum (6)
+==========================================================================================
 
+:editor: Eakins, Rex
 :volume: XVII
 :volume_part: 6
 :isbn10: 1-896926-66-5
 :isbn13: 978-1-896926-66-7
+:publisher: IMM
 :price: 126
+:place: Ottawa 
+:date: 2005
+:pages: cxxx + 201
+
+An Editorial Transnotation of the Manuscript.
