--- a/content/pages/studies/978-1-896926-13-1.rst
+++ b/content/pages/studies/978-1-896926-13-1.rst
@@ -1,7 +1,6 @@
-Design & Production Medieval & Early Modern Europe
-==================================================
+Design and Production in Medieval and Early Modern Europe: Essays in Honor of Bradford Blaine =============================================================================================
 
-:author: van Deusen, Nancy	
+:editor: van Deusen, Nancy	
 :volume: LXII
 :volume_part: 4
 :price: 64
@@ -9,3 +8,7 @@ Design & Production Medieval & Early Modern Europe
 :isbn13: 978-1-896926-13-1
 :publisher: IMM
 :place: Ottawa
+:date: 1998
+:pages: xiii + 162
+
+Claremont Cultural Studies.
