--- a/content/pages/studies/978-1-896926-13-1.rst
+++ b/content/pages/studies/978-1-896926-13-1.rst
@@ -1,4 +1,5 @@
-Design and Production in Medieval and Early Modern Europe: Essays in Honor of Bradford Blaine =============================================================================================
+Design and Production in Medieval and Early Modern Europe: Essays in Honor of Bradford Blaine
+=============================================================================================
 
 :editor: van Deusen, Nancy	
 :volume: LXII
