--- a/content/pages/studies/978-1-896926-01-8.rst
+++ b/content/pages/studies/978-1-896926-01-8.rst
@@ -1,7 +1,7 @@
-Tradition and Ecstasy: Agony of the 14th Century
-================================================
+Tradition and Ecstasy: The Agony of the Fourteenth Century
+==========================================================
 
-:author: van Deusen, Nancy	
+:editor: van Deusen, Nancy	
 :volume: LXII
 :volume_part: 3
 :price: 80
@@ -9,3 +9,7 @@ Tradition and Ecstasy: Agony of the 14th Century
 :isbn13: 978-1-896926-01-8
 :publisher: IMM
 :place: Ottawa
+:date: 1997
+:pages: 336
+
+Claremont Cultural Studies.
