--- a/content/pages/studies/978-1-896926-36-0.rst
+++ b/content/pages/studies/978-1-896926-36-0.rst
@@ -1,4 +1,5 @@
-Issues in Medieval Philosophy: Essays in Honor of Richard C. Dales ==================================================================
+Issues in Medieval Philosophy: Essays in Honor of Richard C. Dales
+==================================================================
 
 :editor: van Deusen, Nancy	
 :volume: LXII
