--- a/content/pages/studies/978-1-926664-31-6.rst
+++ b/content/pages/studies/978-1-926664-31-6.rst
@@ -1,9 +1,14 @@
-HISTORIÆ: The Office of Saint Julian of Le Mans
-===============================================
+HISTORIÆ: The Office of Saint Julian of Le Mans by Letald of Micy (circa 1000)
+==============================================================================
 
-:author: Hiley, David
+:editor: Hiley, David
 :volume: LXV
 :volume_part: 25
 :price: 62
 :isbn13: 978-1-926664-31-6
 :publisher: IMM
+:place: Lions Bay
+:date: 2015
+:pages: xxiii + 54
+
+Introduction and Edition by David Hiley.
