--- a/content/pages/studies/978-1-926664-23-1.rst
+++ b/content/pages/studies/978-1-926664-23-1.rst
@@ -1,11 +1,15 @@
-HISTORIÆ: Historia Sancti Magni
-===============================
+HISTORIÆ: Hermannus Contractus (1013-1054); Historia Sancti Magni
+=================================================================
 
-:author: Hiley, David 
-:author: Berschin, Walter 
+:editor: Hiley, David
+:editor2: Berschin, Walter
 :volume: LXV
 :volume_part: 22
 :price: 70
 :isbn13: 978-1-926664-23-1
 :publisher: IMM
-:place: Lions Bay, BC
+:place: Lions Bay
+:date: 2013
+:pages: xxiii + 35
+
+Einführung und Edition von David Hiley und Walter Berschin. Jubiläumsausgabe.
