--- a/content/pages/collected_works/978-1-896926-58-2.rst
+++ b/content/pages/collected_works/978-1-896926-58-2.rst
@@ -1,5 +1,5 @@
-Le Veglie di Siena; The Night Games of Siena
-============================================
+Le Veglie di Siena; The Night Games of Siena (A Madrigal Comedy), 1604
+======================================================================
 
 :author: Vecchi, Orazio
 :editor: Beecher, Donald
